(chores) camel-azure-storage-blob: use unmodifiable list when possible